--- a/styles.css
+++ b/styles.css
@@ -43,7 +43,7 @@ nav ul {
 
 nav ul li a {
   margin: 30px;
-  font-family: monospace;
+  font-family: myriad pro regular;
   color: #505050;
   font-size: 15px;
   font-weight: 600;
@@ -54,7 +54,7 @@ nav ul li a {
 }
 
 .logo {
-  font-family: sans-serif;
+  font-family: RoadTest;
   color: #000000;
   font-size: 22px;
 }
@@ -75,14 +75,14 @@ nav ul li a {
 }
 
 .text-container p:nth-child(1) {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family:calibri;
   font-weight: bold;
   color: #6d6d6d;
   font-size: 22px;
 }
 
 .text-container p:nth-child(2) {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: calibri;
   font-weight: bold;
   letter-spacing: 1px;
   color: #1a1a1a;
@@ -90,7 +90,7 @@ nav ul li a {
 }
 
 .text-container p:nth-child(3) {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: myriad pro regular;
   color: #403e3e;
   font-size: 30px;
   line-height: 30px;
@@ -129,4 +129,114 @@ nav ul li a {
 }
 button:active {
   transform: scale(1.1);
+}
+
+.about-container{
+    width : 80%;
+    height: 330px;
+    background-color: #ffffff;
+    border-radius: 20px;
+    box-shadow: 2px 2px 12px rgba(0, 0, 0, 0.2);
+    display: flex;
+    margin: -7% auto 20px auto;
+    position: relative;
+    justify-content: space-evenly;
+    align-items:center;
+}
+
+.about-container img{
+    height : 250px;
+}
+
+.about-text{
+    width : 550px;
+}
+
+.about-text p:nth-child(1){
+    color : #403e3e;
+    font-family: myriad pro;
+    font-weight: bold;
+    font-size: 23px;
+    line-height: 0px;
+}
+.about-text p:nth-child(2){
+    color:#3e3d3d;
+    font-size: 13px;
+    font-family: myriad pro;
+    font-weight: bold;
+    line-height: 5px;
+}
+.about-text p:nth-child(3),
+.about-text p:nth-child(4){
+    color:#7e7d7d;
+    font-size: 16px;
+    font-family: calibri;
+    /* font-weight: bold;
+    line-height: 5px; */
+}
+
+.about-text button{
+    width: 120px;
+    height:40px;
+    color: #ffffff;
+    outline: none;
+    border: none;
+    font-family: calibri;
+    background-color: #262525;
+
+}
+
+.services{
+    height:600px;
+    background-color: #ffffff;
+    padding: 2% 10% 0px 10%;
+
+}
+.services-text p:nth-child(1){
+    font-family:calibri ;
+    font-weight:bold;
+    color:#3e3d3d;
+    font-size: 30px;
+    line-height: 0px;
+
+}
+.services-text p:nth-child(2){
+    font-family:calibri ;
+    font-weight:bold;
+    color:#3e3d3d;
+    font-size: 15px;
+    line-height: 5px;
+}
+.services-text p:nth-child(3){
+    font-family:calibri ;
+    color:#7e7d7d;
+}
+
+.services-text{
+    width:500px;
+    margin: 50px 0px   ;
+
+}
+
+.box-1, .box-2, .box3 {
+    width : 300px;
+    height: 320px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    box-shadow: 2px 2px 12px rgba(0, 0, 0, 0.3);
+}
+
+.box-container{
+    display: flex;
+    justify-content: space-between;
+}
+
+.box-1{
+    background-image: url("../images/services-1.png");
+}
+.box-2{
+    background-image: url("../images/services-2.png");
+}
+.box-3{
+    background-image: url("../images/services-3.png");
 }
