--- a/styles.css
+++ b/styles.css
@@ -75,7 +75,7 @@ nav ul li a {
 }
 
 .text-container p:nth-child(1) {
-  font-family:calibri;
+  font-family: calibri;
   font-weight: bold;
   color: #6d6d6d;
   font-size: 22px;
@@ -131,112 +131,187 @@ button:active {
   transform: scale(1.1);
 }
 
-.about-container{
-    width : 80%;
-    height: 330px;
-    background-color: #ffffff;
-    border-radius: 20px;
-    box-shadow: 2px 2px 12px rgba(0, 0, 0, 0.2);
-    display: flex;
-    margin: -7% auto 20px auto;
-    position: relative;
-    justify-content: space-evenly;
-    align-items:center;
+.about-container {
+  width: 80%;
+  height: 330px;
+  background-color: #ffffff;
+  border-radius: 20px;
+  box-shadow: 2px 2px 12px rgba(0, 0, 0, 0.2);
+  display: flex;
+  margin: -7% auto 20px auto;
+  position: relative;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
-.about-container img{
-    height : 250px;
+.about-container img {
+  height: 250px;
 }
 
-.about-text{
-    width : 550px;
+.about-text {
+  width: 550px;
 }
 
-.about-text p:nth-child(1){
-    color : #403e3e;
-    font-family: myriad pro;
-    font-weight: bold;
-    font-size: 23px;
-    line-height: 0px;
+.about-text p:nth-child(1) {
+  color: #403e3e;
+  font-family: myriad pro;
+  font-weight: bold;
+  font-size: 23px;
+  line-height: 0px;
 }
-.about-text p:nth-child(2){
-    color:#3e3d3d;
-    font-size: 13px;
-    font-family: myriad pro;
-    font-weight: bold;
-    line-height: 5px;
+.about-text p:nth-child(2) {
+  color: #3e3d3d;
+  font-size: 13px;
+  font-family: myriad pro;
+  font-weight: bold;
+  line-height: 5px;
 }
 .about-text p:nth-child(3),
-.about-text p:nth-child(4){
-    color:#7e7d7d;
-    font-size: 16px;
-    font-family: calibri;
-    /* font-weight: bold;
+.about-text p:nth-child(4) {
+  color: #7e7d7d;
+  font-size: 16px;
+  font-family: calibri;
+  /* font-weight: bold;
     line-height: 5px; */
 }
 
-.about-text button{
-    width: 120px;
-    height:40px;
-    color: #ffffff;
-    outline: none;
-    border: none;
-    font-family: calibri;
-    background-color: #262525;
-
+.about-text button {
+  width: 120px;
+  height: 40px;
+  color: #ffffff;
+  outline: none;
+  border: none;
+  font-family: calibri;
+  background-color: #262525;
 }
 
-.services{
-    height:600px;
-    background-color: #ffffff;
-    padding: 2% 10% 0px 10%;
-
+.services {
+  height: 600px;
+  background-color: #ffffff;
+  padding: 2% 10% 0px 10%;
 }
-.services-text p:nth-child(1){
-    font-family:calibri ;
-    font-weight:bold;
-    color:#3e3d3d;
-    font-size: 30px;
-    line-height: 0px;
-
+.services-text p:nth-child(1) {
+  font-family: calibri;
+  font-weight: bold;
+  color: #3e3d3d;
+  font-size: 30px;
+  line-height: 0px;
 }
-.services-text p:nth-child(2){
-    font-family:calibri ;
-    font-weight:bold;
-    color:#3e3d3d;
-    font-size: 15px;
-    line-height: 5px;
+.services-text p:nth-child(2) {
+  font-family: calibri;
+  font-weight: bold;
+  color: #3e3d3d;
+  font-size: 15px;
+  line-height: 5px;
 }
-.services-text p:nth-child(3){
-    font-family:calibri ;
-    color:#7e7d7d;
+.services-text p:nth-child(3) {
+  font-family: calibri;
+  color: #7e7d7d;
 }
 
-.services-text{
-    width:500px;
-    margin: 50px 0px   ;
-
+.services-text {
+  width: 500px;
+  margin: 50px 0px;
 }
 
-.box-1, .box-2, .box3 {
-    width : 300px;
-    height: 320px;
-    background-repeat: no-repeat;
-    background-size: cover;
-    box-shadow: 2px 2px 12px rgba(0, 0, 0, 0.3);
+.box-1,
+.box-2,
+.box-3 {
+  width: 300px;
+  height: 320px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  box-shadow: 2px 2px 12px rgba(0, 0, 0, 0.3);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
-.box-container{
-    display: flex;
-    justify-content: space-between;
+.box-container {
+  display: flex;
+  justify-content: space-between;
 }
 
-.box-1{
-    background-image: url("../images/services-1.png");
+.box-1 {
+  background-image: url("../images/services-1.png");
 }
-.box-2{
-    background-image: url("../images/services-2.png");
+.box-2 {
+  background-image: url("../images/services-2.png");
 }
-.box-3{
-    background-image: url("../images/services-3.png");
+.box-3 {
+  background-image: url("../images/services-3.png");
+}
+
+.box-1 span,
+.box-2 span,
+.box-3 span {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-color: #ffffff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: calibri;
+  font-weight: bold;
+}
+
+.box-1 p:nth-child(3),
+.box-2 p:nth-child(3),
+.box-3 p:nth-child(3) {
+  color: #ffffff;
+  font-family: calibri;
+  font-size: 23px;
+  line-height: 0px;
+}
+.box-1 p:nth-child(4),
+.box-2 p:nth-child(4),
+.box-3 p:nth-child(4) {
+  font-family: calibri;
+  text-align: center;
+  width: 230px;
+  margin: 0px 0px 20px 0px;
+  color: #8f8f8f;
+}
+
+.box-1 button,
+.box-2 button,
+.box-3 button {
+  width: 100px;
+  height: 30px;
+  background-color: #ffffff;
+  border: none;
+  outline: none;
+  border-radius: 5px;
+}
+
+.contact-me {
+  width: 100%;
+  height: 280px;
+  background-color: black;
+  background-size: cover;
+  background-repeat: no-repeat;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.contact-me p {
+  color: #ffffff;
+  font-size: 30px;
+  font-family: calibri;
+  font-weight: bold;
+  border-bottom: 2px solid #ffffff;
+}
+
+.contact-me button {
+  width: 200px;
+  height: 40px;
+  background-color: #ffffff;
+  outline: none;
+  border: none;
+  font-size: 14px;
+  font-weight: bold;
 }
