--- a/styles.css
+++ b/styles.css
@@ -315,3 +315,104 @@ button:active {
   font-size: 14px;
   font-weight: bold;
 }
+footer {
+  height: 300px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+
+footer p {
+  font-family: calibri;
+}
+
+footer p:nth-child(1) {
+  font-size: 30px;
+  font-weight: bold;
+  color: #191919;
+  line-height: 10px;
+}
+
+footer p:nth-child(2) {
+  font-size: 16px;
+  color:#7e7d7d;
+  width:600px;
+  text-align: center;
+
+}
+
+.social-icons a{
+  width: 40px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #e6e3e3;
+  margin:20px 10px;
+  border-radius: 50%;
+
+
+}
+
+.social-icons{
+  display: flex;
+}
+
+.copyright{
+  color: #565555;
+  font-size: 13px;
+  position:absolute;
+  left : 50%;
+  bottom: 10px;
+  transform: translateX(-50%);
+
+
+}
+
+.social-icons i{
+  color: #000000;
+
+}
+
+.social-icons a:hover,
+.social-bar a:hover{
+  background-color: #000000;
+  box-shadow: 2px 2px 12px rgba(0, 0, 0, 0.2);
+  transition: all ease 0.5s;
+}
+
+.social-icons a:hover i,
+.social-bar a:hover i{
+  color: #ffffff;
+  transition: all ease 0.5s;
+}
+
+.social-bar{
+  position: fixed;
+  top: 50%;
+  right: 0PX;
+  transform: translateY(-50%);
+
+}
+
+.social-bar a{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 50%;
+  height: 50%;
+  padding: 0px;
+  margin: 0px;
+  line-height: 0px;
+  background-color: #ffffff;
+  border: 1px solid #cbcbcb;
+  box-shadow: 2px 2px 12px rgba(0, 0, 0, 0.2);
+}
+
+.social-bar I{
+  color: #2b2b2b;
+  font-size: 20px;
+
+}
