--- a/styles.css
+++ b/styles.css
@@ -377,19 +377,19 @@ footer p:nth-child(2) {
 }
 
 .social-icons a:hover,
-.social-bar a:hover{
+.a-social-b a:hover{
   background-color: #000000;
   box-shadow: 2px 2px 12px rgba(0, 0, 0, 0.2);
   transition: all ease 0.5s;
 }
 
 .social-icons a:hover i,
-.social-bar a:hover i{
+.a-social-b a:hover i{
   color: #ffffff;
   transition: all ease 0.5s;
 }
 
-.social-bar{
+.a-social-b {
   position: fixed;
   top: 50%;
   right: 0PX;
@@ -397,12 +397,12 @@ footer p:nth-child(2) {
 
 }
 
-.social-bar a{
+.a-social-b  a{
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 50%;
-  height: 50%;
+  width: 50px;
+  height: 50px;
   padding: 0px;
   margin: 0px;
   line-height: 0px;
@@ -411,7 +411,7 @@ footer p:nth-child(2) {
   box-shadow: 2px 2px 12px rgba(0, 0, 0, 0.2);
 }
 
-.social-bar I{
+.a-social-b i{
   color: #2b2b2b;
   font-size: 20px;
 
