--- a/styles.css
+++ b/styles.css
@@ -35,6 +35,23 @@ nav {
   background-color: #ffffff;
   box-shadow: 2px 2px 12px rgba(0, 0, 0, 0.2);
   padding: 0px 5%;
+  position: fixed;
+  left: 0px;
+  top: 0px;
+  right: 0px;
+  z-index: 1;
+}
+
+.profile{
+  display:flex;
+  justify-content: center;
+  align-items: center;
+}
+
+nav img{
+  width : 45px;
+  height: 45px;
+  margin-right: 15px;
 }
 
 nav ul {
@@ -49,14 +66,12 @@ nav ul li a {
   font-weight: 600;
 }
 
-.toggle {
-  display: none;
-}
 
 .logo {
-  font-family: RoadTest;
+  font-family:Roboto;
   color: #000000;
   font-size: 22px;
+  font-weight: bold;
 }
 
 .active {
