--- a/styles.css
+++ b/styles.css
@@ -27,6 +27,14 @@ a {
   text-decoration: none;
 }
 
+#underline:hover {
+  text-decoration:underline;
+}
+
+button:hover{
+  transform: scale(1.05);
+}
+
 nav {
   display: flex;
   justify-content: space-between;
@@ -57,7 +65,7 @@ nav img{
 nav ul {
   display: flex;
 }
-
+.logo,
 nav ul li a {
   margin: 30px;
   font-family: myriad pro regular;
@@ -66,12 +74,12 @@ nav ul li a {
   font-weight: 600;
 }
 
+#underline:hover{
+  transform:scale(1.05);
+}
 
-.logo {
-  font-family:Roboto;
-  color: #000000;
-  font-size: 22px;
-  font-weight: bold;
+.logo{
+  margin:15px;
 }
 
 .active {
@@ -116,7 +124,7 @@ nav ul li a {
   line-height: 0px;
 }
 
-.text-container button {
+.text-container button  {
   width: 130px;
   height: 42px;
   border-radius: 10px;
@@ -198,6 +206,8 @@ button:active {
   border: none;
   font-family: calibri;
   background-color: #262525;
+  margin:0 15px;
+  border-radius: 5px;
 }
 
 .services {
