--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,8 @@
+:root {
+  --primary-color: rgba(13, 110, 139, 0.75);
+  --overlay-color: rgba(24, 39, 51, 0.85);
+  --menu-speed: 0.75s;
+}
 body {
   background-color: #f6f5f5;
   font-family: poppins;
@@ -5,7 +10,7 @@ body {
   padding: 0px;
 }
 
-/* vw: hundredths of the viewport width.
+/*  vw: hundredths of the viewport width.
     vh: hundredths of the viewport height.
     vmin: hundredths of whichever is smaller, the viewport width or height.
     vmax: hundredths of whichever is larger, the viewport width or height. */
@@ -13,10 +18,17 @@ body {
 section {
   width: 100%;
   height: 95vh;
-  background-image: url("../images/bg.png");
+  display: flex;
   background-repeat: no-repeat;
   background-size: cover;
   position: relative;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+input {
+  display: none;
 }
 
 ul {
@@ -28,10 +40,10 @@ a {
 }
 
 #underline:hover {
-  text-decoration:underline;
+  text-decoration: underline;
 }
 
-button:hover{
+button:hover {
   transform: scale(1.05);
 }
 
@@ -42,7 +54,6 @@ nav {
   height: 60px;
   background-color: #ffffff;
   box-shadow: 2px 2px 12px rgba(0, 0, 0, 0.2);
-  padding: 0px 5%;
   position: fixed;
   left: 0px;
   top: 0px;
@@ -50,17 +61,21 @@ nav {
   z-index: 1;
 }
 
-.profile{
-  display:flex;
+.hamburger {
+  display: none;
+}
+.profile {
+  display: flex;
   justify-content: center;
   align-items: center;
 }
 
-nav img{
-  width : 45px;
+nav img {
+  width: 45px;
   height: 45px;
   margin-right: 15px;
   border-radius: 50%;
+  margin-left: 30px;
 }
 
 nav ul {
@@ -68,34 +83,38 @@ nav ul {
 }
 .logo,
 nav ul li a {
-  margin: 30px;
+  margin-left: 30px;
   font-family: Arial, Helvetica, sans-serif;
   color: #505050;
   font-size: 15px;
   font-weight: 600;
 }
 
-#underline:hover{
-  transform:scale(1.05);
+.dropdown {
+  display: none;
 }
 
-.logo{
-  margin:15px;
+.dropdown {
+  display: flex;
+  flex-direction: column;
+  padding-top: 30px;
+  align-items: center;
+}
+.dropdown * {
+  width: 160px;
+}
+
+#underline:hover {
+  transform: scale(1.05);
+}
+
+.logo {
+  margin: 15px;
 }
 
 .active {
   color: #2d2a2a;
   font-weight: bold;
-}
-
-.model {
-  height: 530px;
-  position: absolute;
-  bottom: 0;
-  left: 87%;
-  transform: translateX(-75%);
-  height: 80%;
-  padding-bottom: 2%;
 }
 
 .text-container p:nth-child(1) {
@@ -125,7 +144,7 @@ nav ul li a {
   line-height: 0px;
 }
 
-.text-container button  {
+.text-container button {
   width: 130px;
   height: 42px;
   border-radius: 10px;
@@ -135,12 +154,7 @@ nav ul li a {
   outline: none;
   margin: 0px 10px;
 }
-.text-container {
-  position: absolute;
-  left: 13%;
-  top: 42%;
-  transform: translate(-13%, -42%);
-}
+
 .hire-btn {
   border: 2px solid #373636;
   color: #373636;
@@ -166,14 +180,17 @@ button:active {
   position: relative;
   justify-content: space-evenly;
   align-items: center;
+  flex-direction: row;
 }
 
 .about-container img {
   height: 250px;
+  margin-left: 15px;
 }
 
 .about-text {
   width: 550px;
+  margin: 15px;
 }
 
 .about-text p:nth-child(1) {
@@ -195,8 +212,6 @@ button:active {
   color: #7e7d7d;
   font-size: 16px;
   font-family: calibri;
-  /* font-weight: bold;
-    line-height: 5px; */
 }
 
 .about-text button {
@@ -207,13 +222,13 @@ button:active {
   border: none;
   font-family: calibri;
   background-color: #262525;
-  margin:0 15px;
+  margin: 0 15px;
   border-radius: 5px;
 }
 
 .services {
   background-color: #ffffff;
-  padding: 5px 10% 40px 10%;
+  padding: 5px 10% 0 10%;
 }
 .services-text p:nth-child(1) {
   font-family: calibri;
@@ -239,7 +254,7 @@ button:active {
   margin: 50px 0px;
 }
 
-.box{
+.box {
   min-width: 300px;
   height: 320px;
   background-repeat: no-repeat;
@@ -249,15 +264,13 @@ button:active {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin:0 20px 40px;
+  margin: 0 20px 40px;
 }
-
 
 .box-container {
   display: flex;
   justify-content: space-evenly;
   flex-wrap: wrap;
-  
 }
 
 .box-1 {
@@ -314,15 +327,11 @@ button:active {
 }
 
 .contact-me {
-  width: 100%;
-  height: 280px;
   background-color: black;
-  background-size: cover;
-  background-repeat: no-repeat;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  text-align: center;
+  padding: 42px;
+  max-width: 800px;
+  margin: 40px auto 0;
 }
 
 .contact-me p {
@@ -331,6 +340,8 @@ button:active {
   font-family: calibri;
   font-weight: bold;
   border-bottom: 2px solid #ffffff;
+  padding-bottom: 20px;
+  margin-top: 0;
 }
 
 .contact-me button {
@@ -343,109 +354,404 @@ button:active {
   font-weight: bold;
 }
 footer {
-  height: 300px;
-  display: flex;
+  text-align: center;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  position: relative;
 }
 
 footer p {
   font-family: calibri;
+  padding: 0 20px;
 }
 
 footer p:nth-child(1) {
   font-size: 30px;
   font-weight: bold;
   color: #191919;
-  line-height: 10px;
+  line-height: 30px;
 }
 
 footer p:nth-child(2) {
   font-size: 16px;
-  color:#7e7d7d;
-  width:600px;
+  color: #7e7d7d;
   text-align: center;
-
 }
 
-.social-icons a{
+.social-icons a {
   width: 40px;
   height: 40px;
   display: flex;
   justify-content: center;
   align-items: center;
   background-color: #e6e3e3;
-  margin:20px 10px;
+  margin: 20px 10px;
   border-radius: 50%;
-
-
 }
 
-.social-icons{
+.social-icons {
   display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.copyright{
+.copyright {
   color: #565555;
   font-size: 13px;
-  position:absolute;
-  left : 50%;
+  position: absolute;
+  left: 50%;
   bottom: 10px;
   transform: translateX(-50%);
-
-
 }
 
-.social-icons i{
+.social-icons i {
   color: #000000;
-
 }
 
 .social-icons a:hover,
-.a-social-b a:hover{
+.a-social-b a:hover {
   background-color: #000000;
   box-shadow: 2px 2px 12px rgba(0, 0, 0, 0.2);
   transition: all ease 0.5s;
 }
 
 .social-icons a:hover i,
-.a-social-b a:hover i{
+.a-social-b a:hover i {
   color: #ffffff;
   transition: all ease 0.5s;
 }
 
 .a-social-b {
-  position: fixed;
-  top: 50%;
-  right: 0PX;
-  transform: translateY(-50%);
-
+  display: none;
 }
 
-.a-social-b  a{
+@media (min-width: 516px) {
+  .a-social-b {
+    position: fixed;
+    top: 50%;
+    right: 0px;
+    transform: translateY(-50%);
+    display: block;
+  }
+
+  .a-social-b a {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 50px;
+    height: 50px;
+    padding: 0px;
+    margin: 0px;
+    line-height: 0px;
+    background-color: #ffffff;
+    border: 1px solid #cbcbcb;
+    box-shadow: 2px 2px 12px rgba(0, 0, 0, 0.2);
+  }
+
+  .a-social-b i {
+    color: #2b2b2b;
+    font-size: 20px;
+  }
+}
+
+@media (max-width: 767px) {
+  .openm {
+    display: none;
+  }
+  .hamburger {
+    width: 35px;
+    height: 40px;
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+  }
+
+  .hamburger span {
+    background-color: #505050;
+    height: 4px;
+    width: 30px;
+    border-radius: 2px;
+    line-height: 2px;
+  }
+}
+
+@media (max-width: 769px) {
+  section {
+    height: 80vh;
+  }
+  .about-container {
+    width: 80%;
+    height: auto;
+
+    border-radius: 20px;
+    box-shadow: 2px 2px 12px rgba(0, 0, 0, 0.2);
+    display: flex;
+    margin: -7% auto 20px auto;
+
+    align-items: center;
+    flex-direction: column;
+  }
+  .about-container img {
+    height: 250px;
+    margin: 15px;
+  }
+
+  .about-text {
+    width: auto;
+    margin: 15px;
+  }
+
+  .about-text p:nth-child(1) {
+    font-size: 23px;
+    line-height: 0px;
+  }
+  .about-text p:nth-child(2) {
+    font-size: 13px;
+
+    line-height: 5px;
+  }
+  .about-text p:nth-child(3),
+  .about-text p:nth-child(4) {
+    font-size: 16px;
+  }
+
+  .about-text button {
+    width: 110px;
+    height: 35px;
+    margin: 0 5px;
+  }
+
+  .contact-me p {
+    font-size: 25px;
+  }
+}
+
+@media (max-width: 538px) {
+  section {
+    height: 70vh;
+  }
+  .contact-me p {
+    font-size: 25px;
+  }
+  .about-text button {
+    width: 100px;
+    height: 30px;
+    margin: 0 5px;
+  }
+
+  .contact-me button {
+    width: 180px;
+    height: 35px;
+  }
+  footer p:nth-child(1) {
+    font-size: 25px;
+
+    line-height: 30px;
+  }
+
+  footer p:nth-child(2) {
+    font-size: 14px;
+    color: #7e7d7d;
+    text-align: center;
+  }
+  .text-container button {
+    width: 110px;
+    height: 44px;
+    font-size: 12px;
+    margin: 0px 10px;
+  }
+}
+
+@media (max-width: 375px) {
+  section {
+    height: 64vh;
+  }
+  .contact-me p {
+    font-size: 20px;
+  }
+  .contact-me button {
+    width: 1509x;
+    height: 30px;
+    font-size: 12px;
+  }
+  footer p:nth-child(1) {
+    font-size: 25px;
+
+    line-height: 30px;
+  }
+
+  footer p:nth-child(2) {
+    font-size: 14px;
+    color: #7e7d7d;
+    text-align: center;
+  }
+
+  .text-container button {
+    width: 100px;
+    height: 40px;
+    font-size: 10px;
+    margin: 0px 10px;
+  }
+
+  .text-container {
+    padding: 0 15px;
+  }
+  .text-container p:nth-child(1) {
+    font-size: 18px;
+  }
+
+  .text-container p:nth-child(2) {
+    font-size: 50px;
+  }
+
+  .text-container p:nth-child(3) {
+    font-size: 23px;
+    line-height: 25px;
+  }
+}
+
+/* hamburger */
+
+@media (max-width: 767px) {
+  .openm {
+    display: none;
+  }
+  .hamburger {
+    width: 35px;
+    height: 40px;
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    position: absolute;
+    z-index: 3000;
+  }
+
+  .hamburger span {
+    background-color: #505050;
+    height: 4px;
+    width: 30px;
+    border-radius: 2px;
+    line-height: 2px;
+  }
+
+  #menu {
+    width: 40px;
+    height: 40px;
+    margin: 0;
+    z-index: 400;
+  }
+
+  #toggle {
+    display: none;
+  }
+  
+  .btn {
+    display: inline-block;
+    width: 100%;
+    height: 100%;
+    background-color: white;
+    border: none;
+    border-radius: 50%;
+    text-align: center;
+    position: relative;
+    z-index: 11;
+  }
+
+
+  .btn .clk {
+    display: block;
+    left: 20%;
+    right: 20%;
+    top: 20%;
+    bottom: 20%;
+    overflow: hidden;
+    border-color: #505050 #505050;
+    border-style: solid;
+    border-width: 4px 0;
+    /* border-width: 0.6em 0; */
+    border-radius: 0%;
+    position: absolute;
+    transition: all 0.5s ease-in-out;
+  }
+  .btn .clk:before,
+  .btn .clk:after {
+    content: "";
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 4px;
+    top: 50%;
+    left: 50%;
+    background-color: #505050;
+    transform: translate(-50%, -50%);
+    transform-origin: center center;
+    transition: all 0.5s ease-in-out;
+  }
+
+  #toggle:checked ~ .btn .clk {
+    border-radius: 50%;
+    border-width: 4px;
+    border-color: #505050 #505050;
+    transform: rotate(-315deg);
+    transform-origin: center center;
+    transition: all 0.5s ease-in-out;
+  }
+  #toggle:checked ~ .btn .clk:before,
+  #toggle:checked ~ .btn .clk:after {
+    width: 90%;
+    border-radius: 2px;
+    height: 4px;
+    transition: all 0.5s ease-in-out;
+  }
+  #toggle:checked ~ .btn .clk:after {
+    transform: translate(-50%, -50%) rotate(-90deg);
+    transition: all 0.5s ease-in-out;
+  }
+  #toggle:checked ~ .btn .clk:active,
+  #toggle:checked ~ .btn .clk:hover {
+    background-color: rgba(220, 221, 221, 0.5);
+  }
+  #toggle:checked ~ .btn .clk:active:before,
+  #toggle:checked ~ .btn .clk:active:after,
+  #toggle:checked ~ .btn .clk:hover:before,
+  #toggle:checked ~ .btn .clk:hover:after {
+    width: 60%;
+    transition: all 0.25s ease-in-out;
+  }
+}
+
+.menu-cont {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  right: 50%;
+  bottom: 50%;
+  background: black; 
+  opacity:  90%;
+  overflow: hidden;
+  border-radius: 50%;
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 50px;
-  height: 50px;
-  padding: 0px;
-  margin: 0px;
-  line-height: 0px;
-  background-color: #ffffff;
-  border: 1px solid #cbcbcb;
-  box-shadow: 2px 2px 12px rgba(0, 0, 0, 0.2);
+  transition: all 0.4s ease;
 }
 
-.a-social-b i{
-  color: #2b2b2b;
-  font-size: 20px;
-
+#toggle:checked ~ .menu-cont {
+  top: -50%;
+  bottom: -50%;
+  left: -50%;
+  right: -50%;
 }
 
-/* @media (max-width: 980px) {
-  .box-container {
-    flex-direction: column;
-  }
-} */
+#button-r{
+  font-size:23px;
+  line-height: 70px;
+  color: white;
+  font-weight: bold;
+}
+
+.menu-cont ol li a {
+  text-align: center;
+}
