--- a/styles.css
+++ b/styles.css
@@ -751,7 +751,9 @@ footer p:nth-child(2) {
   color: white;
   font-weight: bold;
 }
-
+.menu{
+  display: none;
+}
 .menu-cont ol li a {
   text-align: center;
 }
