--- a/styles.css
+++ b/styles.css
@@ -117,6 +117,7 @@ nav ul li a {
   font-weight: bold;
 }
 
+
 .text-container p:nth-child(1) {
   font-family: calibri;
   font-weight: bold;
@@ -169,6 +170,10 @@ button:active {
   transform: scale(1.1);
 }
 
+.link-c{
+  text-decoration: none;
+  color: white;
+}
 .about-container {
   width: 80%;
   height: 330px;
@@ -176,7 +181,7 @@ button:active {
   border-radius: 20px;
   box-shadow: 2px 2px 12px rgba(0, 0, 0, 0.2);
   display: flex;
-  margin: -7% auto 20px auto;
+  margin: 0 auto 20px auto;
   position: relative;
   justify-content: space-evenly;
   align-items: center;
@@ -751,8 +756,128 @@ footer p:nth-child(2) {
   font-weight: bold;
 }
 .menu {
-  display: none;
+ display: none;
 }
 .menu-cont ol li a {
   text-align: center;
+}
+/* .......................... */
+#personal-info label input:invalid{
+  border-color: gray;
+  }
+
+/* body{ 
+ width: 100%;
+ margin: 2rem ;
+ background: linear-gradient(45deg, #CCFFFF,#29B6F6,#FFCCCC);
+ font-family:'Raleway', Helvetica, sans-serif;
+ margin: auto;
+ font-size: 1.5rem
+} */
+
+
+
+ 
+
+#personal-info legend{ /*accessibility, sustitude of titles*/
+padding-bottom:0.75rem;
+}
+
+#personal-info legend:focus{ /*accessibility, focus with Keyboard to navigate*/
+ color:black;
+font-style:italic;
+text-decoration:none;
+}
+
+
+#survey-form fieldset{ /*accessibility, get rit of border of fieldset that sorounds similar info*/
+border: none;
+}
+
+.title{
+ text-transform: uppercase;
+ text-align: center;
+ color: #f5fffa;
+ font-weight: 300;
+ font-size: 1.7rem;
+ letter-spacing: 1px;
+}
+
+
+.input-personal{
+width:100%;
+margin-top:0.5rem;
+}
+#personal-info :placeholder-shown{
+ border:none;
+ background:#191970;
+ border-bottom:white solid 1px;
+}
+
+#personal-info ::placeholder{ /*hide test placeholder */
+ opacity:0.1;
+}
+
+.hide{  /*accessibility, Hide text, only for Screen readers */
+ font-size: 0;
+}
+
+select, /*gradient to buttons and select*/
+button{
+ position: relative;
+ z-index: 1;
+ display: inline-block;
+ padding: 0.3rem;
+ margin-top:4rem;
+ font-size: 0.9rem;
+ box-sizing: border-box;
+ background-color: #e7eef1;
+ border: solid 5px transparent; 
+ border-image: linear-gradient(45deg, #CCFFFF,#29B6F6,#FFCCCC);
+ border-image-slice:1;
+ color: black;
+ transition: all 0.3s easy-in-out;
+}
+
+select:hover,
+ button:hover{
+ background-image: linear-gradient(45deg, #CCFFFF,#29B6F6,#FFCCCC);
+ color:#191970; 
+}
+
+#options{
+ margin-top:1rem;
+}
+
+label{
+display:block;
+width:100%;
+line-height:0;
+height:1rem;
+padding:0.5rem 0;
+}
+
+label > input{
+color:black;
+width: 5%;
+}
+
+.comments{
+line-height:1.5rem;
+}
+
+#suggestions textarea{
+padding-top:1rem;
+width: 100%;
+border:none;
+background:#191970;
+border-bottom:white solid 1px;
+color:white;
+}
+
+
+@media only screen and (min-width:800px){
+ #personal-info{
+   width:60%;
+}
 }
